--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -54,6 +54,11 @@ jobs:
         with:
           maven-version: ${{ matrix.maven }}
 
+      - name: Register Problem Matchers
+        id: problem_matchers
+        run: |
+          echo "::add-matcher::.github/openhab-compile-problems.json"
+
       - name: Build
         id: build
         run: './.github/scripts/maven-build'
@@ -77,3 +82,11 @@ jobs:
         with:
           name: sat-summary-report
           path: target/summary_report.html
+
+      - name: Report SAT Errors as Annotations
+        uses: ghys/checkstyle-github-action@main
+        if: ${{ always() && ((steps.build.outcome == 'success') || (steps.build.outcome == 'failure')) }}
+        with:
+          title: CheckStyle Violations
+          path: '**/checkstyle-result.xml'
+          mode: inline
