--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'main'
+      - 'multi-os'
     paths-ignore:
       - '.github/**/*.md'
   pull_request:
@@ -20,10 +21,16 @@ jobs:
       matrix:
         java: [ '21' ]
         maven: [ '3.9.9' ]
-        os: [ 'ubuntu-24.04' ]
+        os: [ 'macos-14', 'ubuntu-24.04', 'windows-2022' ]
     name: Build (Java ${{ matrix.java }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Set up line endings
+        if: ${{ startsWith(matrix.os, 'windows') }}
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol crlf
+
       - name: Checkout
         if: github.head_ref == ''
         uses: actions/checkout@v4
@@ -56,14 +63,14 @@ jobs:
           maven-version: ${{ matrix.maven }}
 
       - name: Register Problem Matchers
-        if: ${{ matrix.java == '17' }}
+        if: ${{ startsWith(matrix.os, 'ubuntu') }}
         id: problem_matchers
         run: |
           echo "::add-matcher::.github/openhab-compile-problems.json"
 
       - name: Build
         id: build
-        run: './.github/scripts/maven-build'
+        run: mvn clean verify -B -T 1.5C -U
         env:
           MAVEN_OPTS: >-
             -Xmx2g
@@ -79,14 +86,14 @@ jobs:
           path: build.log
 
       - name: Upload SAT Summary Report
-        if: ${{ always() && ((steps.build.outcome == 'success') || (steps.build.outcome == 'failure')) }}
+        if: ${{ startsWith(matrix.os, 'ubuntu') && always() && ((steps.build.outcome == 'success') || (steps.build.outcome == 'failure')) }}
         uses: actions/upload-artifact@v4
         with:
           name: sat-summary-report
           path: target/summary_report.html
 
       - name: Report SAT Errors as Annotations
-        if: ${{ matrix.java == '21' && always() && ((steps.build.outcome == 'success') || (steps.build.outcome == 'failure')) }}
+        if: ${{ startsWith(matrix.os, 'ubuntu') && always() && ((steps.build.outcome == 'success') || (steps.build.outcome == 'failure')) }}
         uses: ghys/checkstyle-github-action@main
         with:
           title: CheckStyle Violations
