--- a/bom/compile/pom.xml
+++ b/bom/compile/pom.xml
@@ -436,6 +436,13 @@
       <version>5.12.1</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.openhab</groupId>
+      <artifactId>base-fixes</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
 </project>
